# old_obstacle_avoidance

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md  package.xml  prd_prc.cpp
data/: depth_graph0927_2.csv  depth_graph0927_3.csv  depth_graph0927_4.csv  output_opticalflow.csv  output_opticalflow0.csv  output_opticalflow1.csv  output_opticalflow10.csv  output_opticalflow2.csv  output_opticalflow3.csv  output_opticalflow4.csv  output_opticalflow5.csv  output_opticalflow6.csv  output_opticalflow7.csv  output_opticalflow8.csv  output_opticalflow9.csv  output_opticalflow_roll1004_1-0_6161.csv  output_opticalflow_straight.csv  output_opticalflow_straight1004_0-5.csv  output_opticalflow_straight1004_1-0.csv  output_opticalflow_straight1004_1-0_2121.csv  output_opticalflow_straight1004_1-0_6161.csv  output_opticalflow_straight1004_3131.csv
include/: apf.h  apf_mpc.h  avoid_cls.h  culculate_centroid_class.h  culculating_opticalflow_class.h  depth_image_class.h  detect_objects_class.h  estimate_velocity.h  estimate_velocity_class.h  image_class.h  odometry_class.h  time_class.h  vfh+_class.h  visual_odometry_class.h  whl_cntrl.h
launch/: apf_mpc.launch  avoid.launch  beego_teleop.launch  beego_udp_teleop.launch  detect_objects.launch  estimate_velocity.launch  image_proccess.launch  img_prc.launch  img_srv.launch  test_usb_cam.launch  tf_conv.launch  usb_cam.launch
msg/: .cluster_element.msg.swp  cluster.msg  cluster_element.msg  cluster_point.msg  cluster_with_vel.msg  detected_objects.msg  dvw.msg  filted_object_info.msg  filted_objects_info.msg  img_point.msg  line_point3d.msg  line_pointz.msg  matching.msg  moving_points.msg  moving_pointsArray.msg  object_info.msg  objects_info.msg  point2d.msg  point2i.msg  point3d.msg  points.msg  pointz.msg  prev_vel_msg.msg  rectangle.msg  robot_odm.msg  robot_vel.msg  select_theta.msg  sqr_point3d.msg  sqr_pointz.msg  vel3d.msg  wheel_msg.msg
src/: .img_prc_cls.cpp.swp  .obst_dtct.cpp.swp  .output_flowdata.cpp.swp  beego_teleop_key.cpp  culc_area3d.cpp  culc_areaz.cpp  culculating_optical_flow_class.h  culculating_opticalflow_class.cpp  culculating_opticalflow_class.h  cvArrow_function.cpp  data_processing_dv_dw.cpp  debug_function.cpp  depth_function.cpp  depth_function1011.cpp  depth_image_class.cpp  depth_image_class.h  detect_objects.cpp  detect_objects_class.cpp  detect_objects_class.h  detect_objects_median.cpp  dpt_srv.cpp  dpt_srv1004.cpp  grid_class.cpp  grid_class.h  image_class.cpp  image_class.h  image_function.cpp  image_process_zed_editing.cpp  image_process_zed_function.cpp  image_process_zed_function.h  image_process_zed_main.cpp  img_prc_cls.cpp  img_prc_cls.h  img_srv.cpp  img_srv1004.cpp  improve_depth.cpp  main.cpp  main1004.cpp  nannan_test.cpp  obst_dtct.cpp  (+26 more)
src/apf/: apf.cpp  apf_test.cpp  coordinate_transform.cpp  debug.cpp  gradient_map.cpp  grid_map.cpp  path_planning.cpp  potential_map.cpp  set_param.cpp
src/apf_mpc/: apf_mpc.cpp  apf_mpc_test.cpp  debug.cpp  mpc_func.cpp  mv_pot_map.cpp  set_data.cpp  virtual_fnc.cpp
src/avoid_cls/: avoid_cls.cpp
src/clc_cnt/: culculate_centroid.cpp
src/clc_optflw_cls/: culculating_opticalflow_class.cpp
src/data_proc/: data_processing_xrt_xot.cpp
src/dtct_obj_cls/: add_velocity.cpp  dbscan_with_gm.cpp  dem_method.cpp  density_based_clustering.cpp  detect_objects_class.cpp  self_voxel_method.cpp
src/dtct_obj_cls0614_1/: add_velocity.cpp  density_based_clustering.cpp  detect_objects_class.cpp  self_voxel_method.cpp
src/est_vel/: estimate_velocity.cpp
src/img_cls/: depth_image_class.cpp  image_class.cpp
src/odm_cls/: odometry_class.cpp  pub_odm.cpp  visual_odometry_class.cpp  wheel_odometry_class.cpp
src/tm_cls/: time_class.cpp
src/vfh+_cls/: vfh+_class.cpp
src/wheel_control/: whl_cntrl.cpp
src2/: culc_area3d.cpp  img_prc_cls.h  obst_dtct.cpp  odom_function.cpp  prcs_fnc.cpp  recv1.cpp
srv/: depth.srv  image.srv  odometry.srv  sncr.srv
